--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <title>recap</title>
 </head>
 <body>
+    <!-- html heading tags -->
     <h1>animal</h1>
     <h2>place</h2>
     <h3>thing</h3>
     <h4>gender</h4>
     <h5>occupation</h5>
     <h6>email</h6>
+
+    <!-- paragraph tag -->
+    <p>html stands for hyper text markup language which serves as the basic building structure of a website</p>
 </body>
 </html>
