html anchor tag added

--- a/index.html
+++ b/index.html
@@ -17,5 +17,10 @@
 
     <!-- paragraph tag -->
     <p>html stands for hyper text markup language which serves as the basic building structure of a website</p>
+
+    <!-- anchor tag -->
+    <a href="https://github.com/jekwejoseph123">github</a>
+    <a href="https://learn.gomycode.co/profile">gomycode</a>
+    
 </body>
 </html>
