html unordered list tag added

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
     <!-- anchor tag -->
     <a href="https://github.com/jekwejoseph123">github</a>
     <a href="https://learn.gomycode.co/profile">gomycode</a>
+
+    <!-- unordered list -->
+    <ul>
+        <li>software developer</li>
+        <li>data scientists</li>
+        <li>web designer</li>
+        <li>graphic artist</li>
+    </ul>
     
 </body>
 </html>
