ordered list added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
         <li>web designer</li>
         <li>graphic artist</li>
     </ul>
+
+    <!-- ordered list -->
+    <ol>
+        <li>frontend development</li>
+        <li>backend development</li>
+        <li>dev ops</li>
+        <li>machine learning</li>
+    </ol>
     
 </body>
 </html>
