--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
         <li>dev ops</li>
         <li>machine learning</li>
     </ol>
+
+    <!-- image tag -->
+    <img src="joe.jpg" alt="">
+
+    <!-- audio tag -->
+    <audio controls src="joe.mp3"></audio>
+
+    <!-- video tag -->
+    <video controls src="joe.mp4"></video>
+
+    <!-- iframe tag -->
+    <iframe width="656" height="369" src="https://www.youtube.com/embed/1fg4eJtTy0I" title="TORINO-NAPOLI 3-0 | HIGHLIGHTS | Torino run riot against the champions | Serie A 2023/24" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     
 </body>
 </html>
