html table tag added

--- a/index.html
+++ b/index.html
@@ -49,6 +49,46 @@
 
     <!-- iframe tag -->
     <iframe width="656" height="369" src="https://www.youtube.com/embed/1fg4eJtTy0I" title="TORINO-NAPOLI 3-0 | HIGHLIGHTS | Torino run riot against the champions | Serie A 2023/24" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+    <!-- table tag -->
+    <table border="5">
+        <tr>
+            <th>name</th>
+            <th>email</th>
+            <th>phone</th>
+        </tr>
+
+        <tr>
+            <td>phil</td>
+            <td>phil@gmail.com</td>
+            <td>08033820012</td>
+        </tr>
+
+        <tr>
+            <td>precious</td>
+            <td>pre@gmail.com</td>
+            <td>08033820012</td>
+        </tr>
+
+        <tr>
+            <td>ayobami</td>
+            <td>ayobamii@gmail.com</td>
+            <td>08023061472</td>
+        </tr>
+
+        <tr>
+            <td>mayowa</td>
+            <td>mayowa@gmail.com</td>
+            <td>07011384081</td>
+        </tr>
+
+        <tr>
+
+            <td>phil2</td>
+            <td>phil2@gmail.com</td>
+            <td>07011384081</td>
+        </tr>
+    </table>
     
 </body>
 </html>
