html form elements added

--- a/index.html
+++ b/index.html
@@ -89,6 +89,62 @@
             <td>07011384081</td>
         </tr>
     </table>
+
+    <!-- form tag -->
+    <form action="">
+        <label for="">first name</label>
+        <input type="text" placeholder="enter your first name">
+        <br>
+
+        <label for="">last name</label>
+        <input type="text" placeholder="enter your last name">
+        <br>
+
+        <label for="">email address</label>
+        <input type="email" placeholder="enter your email address">
+        <br>
+
+        <label for="">phone number</label>
+        <input type="tel" placeholder="enter your phone number" >
+        <br>
+
+        <label for="">date of birth</label>
+        <input type="date" placeholder="enter your date of birth">
+        <br>
+
+        <!-- select tag (drop down) -->
+        <select name="" id="">
+            <option value="">panel beater</option>
+            <option value="">doctor</option>
+            <option value="">lawyer</option>
+            <option value="">banker</option>
+            <option value="">music producer</option>
+        </select>
+
+        <!-- radio buttons -->
+        <input type="radio">
+        <label for="">bola ahmed tinubu</label>
+        <br>
+
+        <input type="radio">
+        <label for="">atiku abubakar</label>
+        <br>
+
+        <input type="radio">
+        <label for="">peter obi</label>
+        <br>
+        <br>
+
+        <!-- text area -->
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <br>
+        <br>
+
+        <input type="submit">
+
+        
+
+    </form>
     
 </body>
 </html>
